--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
  </head>
  <body>
   <h1>Primeira Página</h1>
-  <p>Fonte de 10 Amp</p>
+  <p>Após as atividades desenvolvidas ao longo do projeto, a
+execução foi dada como insucedida. Por consequência de
+equívocos no momento de simulação e o indevido dimen-
+sionamento dos componentes, o circuito final foi ativado,
+porém com uma saída constante apenas de 3.85 A. Para que
+isso fosse possível, foi necessário utilizar uma fonte DC e
+inutilizar a ponte retificadora. A alta corrente de entrada im-
+possibilita a atuação dos elementos passivos e sobrecarrega
+o transformador e demais aparatos de condução.</p>
  </body>
 </html>
