--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Fonte de 10 A</title>
  </head>
  <body>
-  <h1>Primeira Página</h1>
+  <h1>Fonte de 10 A</h1>
   <p>Após as atividades desenvolvidas ao longo do projeto, a
 execução foi dada como insucedida. Por consequência de
 equívocos no momento de simulação e o indevido dimen-
