--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <h1>Fonte de 10 A</h1>
   <p>Após as atividades desenvolvidas ao longo do projeto, a
 execução foi dada como insucedida. Por consequência de
-equívocos no momento de simulação e o indevido dimen-
-sionamento dos componentes, o circuito final foi ativado,
+equívocos no momento de simulação e o indevido dimensionamento dos componentes, o circuito final foi ativado,
 porém com uma saída constante apenas de 3.85 A. Para que
 isso fosse possível, foi necessário utilizar uma fonte DC e
 inutilizar a ponte retificadora. A alta corrente de entrada im-
