Updatqe index.html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
      inutilizar a ponte retificadora. A alta corrente de entrada im-
      possibilita a atuação dos elementos passivos e sobrecarrega
      o transformador e demais aparatos de condução.</p>
+  <a>Esse foi a versão final do projeto</a>
  </body>
 </html>
