--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
      equívocos no momento de simulação e o indevido dimensionamento dos componentes, o circuito final foi ativado,
      porém com uma saída constante apenas de 3.85 A. Para que
      isso fosse possível, foi necessário utilizar uma fonte DC e
-     inutilizar a ponte retificadora. A alta corrente de entrada im-
-     possibilita a atuação dos elementos passivos e sobrecarrega
+     inutilizar a ponte retificadora. A alta corrente de entrada impossibilita a atuação dos elementos passivos e sobrecarrega
      o transformador e demais aparatos de condução.</p>
   <a>Esse foi a versão final do projeto</a>
  </body>
