--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
      inutilizar a ponte retificadora. A alta corrente de entrada impossibilita a atuação dos elementos passivos e sobrecarrega
      o transformador e demais aparatos de condução.</p>
   <a>Esse foi a versão final do projeto</a>
+  <img src="circ_montado.jpeg">
  </body>
 </html>
