Updatebhu index.html

--- a/index.html
+++ b/index.html
@@ -24,5 +24,20 @@
   <img src="circ_montado.jpeg">  
   <img src="placa1.jpeg">
   <img src="circ_proteus.jpeg">
+  <h>Especificações do projeto</h>
+  <table>
+   <tr>
+    <th>V(in)</th>
+    <th>i(in)</th>
+   </tr>
+   <tr>
+    <th>2,70V</th>
+    <th>5,23A</th>
+   </tr>
+   <tr>
+    <th>3,3V</th>
+    <th>3,85A</th>
+   </tr>
+  </table>
  </body>
 </html>
