--- a/index.html
+++ b/index.html
@@ -26,17 +26,21 @@
   <img src="circ_proteus.jpeg">
   <h>Especificações do projeto</h>
   <table>
+   th, td {
+  padding: 10px;
+  border: 1px solid #333;
+}
    <tr>
     <th>V(in)</th>
     <th>i(in)</th>
    </tr>
    <tr>
-    <th>2,70V</th>
-    <th>5,23A</th>
+    <td>2,70V</td>
+    <td>5,23A</td>
    </tr>
    <tr>
-    <th>3,3V</th>
-    <th>3,85A</th>
+    <td>3,3V</td>
+    <td>3,85A</td>
    </tr>
   </table>
  </body>
