--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
  <head>
   <meta charset="UTF-8">
   <title>Fonte de 10 A</title>
+  <style>
   th, td {
   padding: 10px;
   border: 1px solid #333;
 }
+  </style>
  </head>
  <body>
   <h1>Fonte de 10 A</h1>
